--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "validate-typescript",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "Extensible schema based validator that supports typescript typing.",
   "main": "dist/index.js",
   "types": "index.d.ts",
@@ -16,7 +16,7 @@
     "validator",
     "validation",
     "typescript",
-    "schmea",
+    "schema",
     "javascript"
   ],
   "author": "Dekryptonite",
