--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "validate-typescript",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Extensible schema based validator that supports typescript typing.",
-  "main": "dist/index.js",
-  "types": "index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
+    "build": "tsc",
+    "clean": "rm -rf dist",
     "test": "cd test && tsc && node ./dist/test"
   },
   "repository": {
