--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "validate-typescript",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "Extensible schema based validator that supports typescript typing.",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./index.js",
+  "types": "./index.d.ts",
   "scripts": {
     "build": "tsc",
-    "clean": "rm -rf dist",
+    "clean": "rm -rf *.js *.js.map *.d.ts",
     "test": "cd test && tsc && node ./dist/test"
   },
   "repository": {
