--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "validate-typescript",
-  "version": "1.1.5",
+  "version": "1.1.8",
   "description": "Extensible schema based validator that supports typescript typing.",
   "main": "./index.js",
   "types": "./index.d.ts",
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf *.js *.js.map *.d.ts",
+    "prepublishOnly": "npm run build",
+    "postpublish": "npm run clean",
     "test": "cd test && tsc && node ./dist/test"
   },
   "repository": {
