--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "types": "./index.d.ts",
   "scripts": {
     "build": "tsc",
-    "clean": "rm -rf *.js *.js.map *.d.ts",
+    "clean": "find . -type f -name '*.js' -name '*.js.map' -name '*.d.ts' -delete",
     "prepublishOnly": "npm run clean && npm run build",
     "postpublish": "npm run clean",
-    "test": "cd test && tsc && node ./dist/test"
+    "test": "cd test && tsc && node ./dist/test",
+    "versions": "npm publish && git add -A",
+    "postversion": "git push"
   },
   "repository": {
     "type": "git",
