Updated the project structure. Added regression tests.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
-node_modules
+# IDEs
+
+.vscode/
+.DS_Store/
+
+# NODE
+
+node_modules/
+
+# GENERATED
+
+lib/
+test/out/
 
 *.js
 *.js.map
+
 *.d.ts
