--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "rm -rf lib",
     "prepublishOnly": "npm run clean && npm run build && npm run test",
     "postpublish": "npm run clean",
-    "setup": "cd test && npm run setup",
+    "install": "cd test && npm install",
     "test": "cd test && npm run test",
     "version": "npm publish && git add -A",
     "postversion": "git push"
