--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prepublishOnly": "npm run clean && npm run build && npm run test",
     "postpublish": "npm run clean",
     "setup": "npm install && cd test && npm install",
-    "test": "tsc && cd test && npm run test",
+    "test": "npm run setup && tsc && cd test && npm run test",
     "version": "npm publish && git add -A",
     "postversion": "git push"
   },
