--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
   "homepage": "https://github.com/Dekryptonite/validate-typescript#readme",
   "dependencies": {
     "chalk": "^2.3.1"
+  },
+  "devDependencies": {
+    "prettier": "^1.19.1"
   }
 }
