--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,8 @@
 {
-	"extends": "./tsconfig.base.json",
-	"compilerOptions": {
-	  "outDir": "lib"    
-	},
-	"include": [
-	  "src/**/*",
-	],
-	"exclude": []
-  }
+  "extends": "./tsconfig.base.json",
+  "compilerOptions": {
+    "outDir": "lib"
+  },
+  "include": ["src/**/*"],
+  "exclude": []
+}
