--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
     "chalk": "^2.3.1"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "@types/jest": "^25.1.4",
+    "jest": "^25.1.0",
+    "prettier": "^1.19.1",
+    "ts-jest": "^25.2.1",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.8.3"
   }
 }
