--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   },
   "homepage": "https://github.com/Dekryptonite/validate-typescript#readme",
   "dependencies": {
-    "chalk": "^2.3.1"
+    "chalk": "^2.3.1",
+    "fp-ts": "^2.5.3"
   },
   "devDependencies": {
     "@types/jest": "^25.1.4",
